actualizado swagger y ruta getPropertiesByUserId
